tests/fixtures/invalid/bytes_in_int.py
# Cannot use 'in' with Bytes and Int
x: bool = b"a" in 123
